package edu.fiuba.algo3.modelo;

public class EstadoDesactivado implements EstadoLapiz {
    public void dibujar() {

    }

    public boolean estaActivado() {
        return false;
    }

}
