package edu.fiuba.algo3.modelo;

public interface EstadoLapiz {
    public void dibujar();

    public boolean estaActivado();
}
