package edu.fiuba.algo3.modelo;

public abstract class Bloque {

    public abstract void ejecutar(Personaje unPersonaje);
}
